--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: sunkaihuisos@gmail.com
 twitter_username: ___kaii_
 github_username:  00Kai0
 # gplus_username:  ""
-linkedin_public_url: 凯辉-孙-b41a68183 # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
+linkedin_public_url: kerwin-sun-b41a68183 # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
 # disqus_username: loremipsum
 profile_picture: https://avatars2.githubusercontent.com/u/26342317
 #https://68.media.tumblr.com/93f384858e9273d5b980b418e2f2f4d5/tumblr_o5i2aybLJG1uapsfmo2_250.png
