--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ user_title: Kerwin Sun
 email: sunkaihuisos@gmail.com
 twitter_username: ___kaii_
 github_username:  00Kai0
+hackerrank_username: __kai__
+jupyter_username: 00Kai0
 leetcode_username: hui-hui-hwaehui
 # gplus_username:  ""
 linkedin_public_url: kerwin-sun-b41a68183 # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
