update twitter account

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://00Kai0.github.io" # for test: remove string 'http://victorvoid.gith
 username: Kerwin Sun
 user_title: Kerwin Sun
 email: sunkaihuisos@gmail.com
-twitter_username: ___kaii_
+twitter_username: kaihuiss
 github_username:  00Kai0
 hackerrank_username: __kai__
 jupyter_username: 00Kai0
