--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ github_username:  00Kai0
 hackerrank_username: __kai__
 jupyter_username: 00Kai0
 leetcode_username: hui-hui-hwaehui
+oschina_id: 3397492
+devto_username: 00kai0
 # gplus_username:  ""
 linkedin_public_url: kerwin-sun-b41a68183 # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
 # disqus_username: loremipsum
