--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ leetcode_username: hui-hui-hwaehui
 oschina_id: '3397492'
 devto_username: 00kai0
 # gplus_username:  ""
-linkedin_public_url: kerwin-kaihui-sun-b41a68183 # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
+linkedin_public_url: kerwin-sun # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
 # disqus_username: loremipsum
 profile_picture: https://avatars2.githubusercontent.com/u/26342317
 #https://68.media.tumblr.com/93f384858e9273d5b980b418e2f2f4d5/tumblr_o5i2aybLJG1uapsfmo2_250.png
